--- a/apps/web_platform/templates/home.html
+++ b/apps/web_platform/templates/home.html
@@ -36,10 +36,10 @@
 </script>
 
 
-<h1 align="center">Stock Prediction Using Various DL Models</h1>
+<h1 align="center">CellEnMon-Research Using Various DL Models</h1>
 <div align="Center">
     <button id="add_stocks" class="ui button">
-        Add Stocks
+        Add Links
     </button>
 </div><br>
 <form align="center">
@@ -51,16 +51,11 @@
         </div>
         <br><br>
         <div style="float: none; margin-right: 15px;">
-            <button id="b1m" class="amcharts-input">1m</button>
-            <button id="b3m" class="amcharts-input">2m</button>
-            <button id="b5m" class="amcharts-input">5m</button>
             <button id="b15m" class="amcharts-input">15m</button>
             <button id="b30m" class="amcharts-input">30m</button>
-            <button id="b90m" class="amcharts-input">90m</button>
             <button id="b1h" class="amcharts-input">1h</button>
             <button id="b1d" class="amcharts-input">1d</button>
-            <button id="b5d" class="amcharts-input">5d</button>
-            <button id="b1wk" class="amcharts-input">1wk</button>
+            <button id="b1wk" class="amcharts-input">1w</button>
             <button id="b1mo" class="amcharts-input">1mo</button>
             <button id="b3mo" class="amcharts-input">3mo</button>
         </div>
@@ -74,7 +69,7 @@
 <div class="ui modal">
     <i class="close icon"></i>
     <div class="header">
-        Select Stock Symbols
+        Select Links
     </div>
     <div class="content">
         <div class="ui form">
